--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "mysql2": "^3.9.4",
     "sequelize": "^6.37.2",
     "sequelize-cli": "^6.6.2",
